<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.bitbucket.arrc.arrc_acousticroomrecreation.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_height_diff"
            android:gravity="start"/>

        <EditText
            android:id="@+id/main_height_diff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_speaker_dist"
            android:gravity="start"/>

        <EditText
            android:id="@+id/main_speaker_dist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_ip"
            android:gravity="start"/>
        <EditText
            android:id="@+id/main_ip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/main_button_dokmanic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_dokmanic" />
    <Button
        android:id="@+id/main_button_go"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_begin" />

</LinearLayout>
